Set background with class instead of inline styles
Also use WMUI colors instead of default CSS ones

--- a/skinValidate.less
+++ b/skinValidate.less
@@ -4,7 +4,21 @@
 	bottom: 8px;
 	width: 40px;
 	height: 40px;
-	color: #000;
 	font-size: 0.7em;
 	text-align: center;
+
+	&-high {
+		background-color: #00af89; // WMUI Green 50
+		color: #fff;
+	}
+
+	&-med {
+		background-color: #fc3; // WMUI Yellow 50
+		color: #000;
+	}
+
+	&-low {
+		background-color: #d33; // WMUI Red 50
+		color: #fff;
+	}
 }
