--- a/skinValidate.less
+++ b/skinValidate.less
@@ -1,7 +1,13 @@
-.skinjson-score {
+.skinjson-scores {
 	position: fixed;
 	z-index: 1000;
+	right: 8px;
 	bottom: 8px;
+	display: flex;
+	gap: 8px;
+}
+
+.skinjson-score {
 	width: 40px;
 	height: 40px;
 	font-size: 0.7em;
