--- a/skinValidate.less
+++ b/skinValidate.less
@@ -8,6 +8,7 @@
 }
 
 .skinjson-score {
+	position: relative;
 	width: 40px;
 	height: 40px;
 	font-size: 0.7em;
@@ -26,5 +27,22 @@
 	&-low {
 		background-color: #d33; // WMUI Red 50
 		color: #fff;
+	}
+
+	// Popup
+	&-info {
+		position: absolute;
+    	bottom: 100%;
+    	margin-bottom: 8px;
+    	right: 0;
+    	background: inherit;
+    	width: 200px;
+    	text-align: left;
+    	padding: 8px;
+    	display: none;
+	}
+
+	&:hover &-info {
+		display: block;
 	}
 }
