Remove validation element inline styles
They are not critical anymore since they are hidden by default

--- a/skinValidate.less
+++ b/skinValidate.less
@@ -1,4 +1,18 @@
 .skin-json {
+	&-validation {
+		&-element {
+			background: #00af89;
+
+			&-block {
+				padding: 20px;
+			}
+
+			a {
+				color: #fff;
+			}
+		}
+	}
+
 	&-overlay {
 		position: fixed;
 		z-index: 1000;
