Reposition skin toggle to left
right hand side is now being used for Vector 2022 toggle

Change-Id: I6e634922978532271726710abbd1243aba38a439

--- a/skinValidate.less
+++ b/skinValidate.less
@@ -59,7 +59,9 @@
 	&-overlay {
 		position: fixed;
 		z-index: 1000;
-		right: 8px;
+		left: 0px;
+		right: 0px;
+		width: 100%;
 		bottom: 8px;
 		display: flex;
 		flex-direction: row-reverse;
