--- a/skinValidate.less
+++ b/skinValidate.less
@@ -59,8 +59,8 @@
 	&-overlay {
 		position: fixed;
 		z-index: 1000;
-		left: 0px;
-		right: 0px;
+		left: 0;
+		right: 0;
 		width: 100%;
 		bottom: 8px;
 		display: flex;
